Fixed problem with module not scaling icons Fixed problem with module being too wide Added Header config

--- a/style.css
+++ b/style.css
@@ -1,32 +1,32 @@
-body {
-    font-family: 'Roboto Condensed', sans-serif;
-  }
-  
-  .MMM-KredsloebWastePickup .icon {
-      width: 3rem;
-      margin-right: 0.2rem;
-      color: #fff; /* Use #000 for light theme */
-  }
-  
-  .MMM-KredsloebWastePickup .module-content {
-      display: flex;
-      justify-content: center;
-      font-size: 24px; /* Medium size */
-      font-weight: 300; /* Light weight */
-      color: #fff; /* Use #000 for light theme */
-  }
-  
-  .region.right .MMM-KredsloebWastePickup .module-content {
-      justify-content: flex-end;
-  }
-  
-  .region.left .MMM-KredsloebWastePickup .module-content {
-      justify-content: flex-start;
-  }
-    
-  .MMM-KredsloebWastePickup .trashType {
-      padding-right: 1rem;
-      font-size: 16px; /* Small size */
-      font-weight: 300; /* Light weight */
-      color: #fff; /* Use #000 for light theme */
-  }
+.waste-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.waste-list li {
+    margin: 5px 0;
+    display: flex;
+    align-items: center; /* Center content vertically */
+}
+
+.waste-type-text {
+    margin-right: 10px; /* Spacing between icon and text */
+}
+
+.icon {
+    margin-right: 5px; /* Spacing between icon and text */
+}
+
+.icon-wrapper {
+    width: 20px;           
+    height: 20px;          
+    background-size: cover;  
+    background-repeat: no-repeat; 
+    background-position: center; 
+}
+
+
+.icon-error {
+    width: 20px;
+    height: 20px;
+}
